@@ -103,6 +103,7 @@
 #include "gw_uuid.h"
 #include "gw-rwlock.h"
 #include "gw-prioqueue.h"
+#include "gw-dlopen.h"
 
 void gwlib_assert_init(void);
 void gwlib_init(void);
